# examples-github-cli-copilot

./: CLI.md  README.md  SDK.md  package.json
.claude/agents/: audit-copilot-sdk-wiring.md  example-compose-stack-with-injected-secret.md  example-credential-cache-scanner.md  example-proxy-auth-env-suite.md  example-sdk-graceful-shutdown.md  example-sdk-minimal-roundtrip.md  example-sdk-multi-turn-session.md  example-sdk-prompt-from-external-input.md  example-sdk-streaming-response.md  example-secret-via-os-keychain.md  scaffold-copilot-sdk-integration.md  wire-copilot-sdk-into-node-app.md
examples/cli/: README.md
examples/cli/few-shot/: Main.java  main.go  main.rs  run.mjs  run.py  run.sh
examples/cli/one-shot/: Main.java  main.go  main.rs  run.mjs  run.py  run.sh
examples/cli/startup/: Main.java  instructions.md  main.go  main.rs  run.mjs  run.py  run.sh
examples/docker/: Dockerfile  README.md  docker-compose.yml
examples/dotnet/: Directory.Build.props  README.md
examples/go/: README.md  go.mod
examples/java/: README.md  pom.xml
examples/oauth/: scan-token.mjs  scan-token.sh  scan_token.py
examples/python/: 01-hello-world.py  02-multi-turn-conversation.py  03-streaming-deltas.py  04-explain-code-file.py  05-commit-message-from-diff.py  06-graceful-shutdown.py  README.md  pyproject.toml  requirements.txt
examples/python/fastapi/: README.md  pyproject.toml  requirements.txt  server.py
examples/rust/: Cargo.toml  README.md
examples/simple-sdk/: 01-hello-world.mjs  10-fail-fast-no-proxy-creds.mjs  11-keychain-proxy-creds.mjs
(+54 files in other folders)
