[project]
name = "copilot-sdk-python-examples"
version = "0.1.0"
description = "Python ports of the simple-sdk Copilot examples (siblings in ../nodejs/simple-sdk and ../java)."
requires-python = ">=3.11"
dependencies = [
    "github-copilot-sdk>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
