[project]
name = "copilot-sdk-fastapi-example"
version = "0.1.0"
description = "FastAPI server that proxies requests through github-copilot-sdk."
requires-python = ">=3.11"
dependencies = [
    "github-copilot-sdk>=0.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
